--- a/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_Pathfinder.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_Pathfinder.cfg
@@ -36,3 +36,11 @@
 		name = WBIResourceDistributor
 	}
 }
+
+@PART[WBI_Chassis1u,WBI_Chassis2u,WBI_ChassisEndu,WBI_HalfChassis,WBI_QuarterChassis,WBI_ChassisSlim2u]:NEEDS[Pathfinder]
+{
+	MODULE
+	{
+		name = WBIResourceDistributor
+	}
+}
