--- a/GameData/WildBlueIndustries/Buffalo/Parts/Structural/Chassis2u.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Structural/Chassis2u.cfg
@@ -76,7 +76,7 @@ PART
 		showGUI = True
 
 		//name of the template nodes to use
-		templateNodes = STORAGE_TEMPLATE;CHASSIS_BATTERY
+		templateNodes = CHASSIS_BATTERY;STORAGE_TEMPLATE
 
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
