--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Contracts.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Contracts.cfg
@@ -2,6 +2,11 @@
 {
 	@Base
 	{
+		@PART_REQUEST:HAS[#Part[cupola]]
+		{
+			@Title = Have a cupola/observation/aperture module at the outpost
+			Part = WBI_Spyglass
+		}
 		PART_REQUEST // A potential habitat request for outposts
 		{
 			Article = a // Article (A/An) to be used prior to part description
@@ -125,4 +130,22 @@
 			}
 		}
 	}
+}
+
+// Cupolas count as cupolas for contracts
+@Contracts
+{
+	@Base
+	{
+        }
+	@Station
+	{
+		@PART_REQUEST:HAS[#Part[cupola]]
+		{
+			@Title = Have a cupola/observation/aperture module at the station
+			Part = crewpod-observation-25
+			Part = crewpod-cupola-375
+			Part = crewtube-cupola-125
+		}
+        }
 }
