--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_KPBS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_KPBS.cfg
@@ -82,20 +82,7 @@
 
 @PART[KKAOSS_Science_g]:FOR[Pathfinder]:NEEDS[PlanetarySurfaceStructures]
 {
-	MODULE
-	{
-		name = WBIScienceConverter
-		scientistBonus = 0.1	//Bonus per scientist star - need at least one! So 0.25x - 2.5x 
-		researchTime = 7	//Larger = slower.  Exponential!
-		scienceMultiplier = 5	//How much science does data turn into?
-		fundsPerData = 25.0  //How many Funds per point of data 
-		reputationPerData = 1.0  //How much Reputation per point of data
-		scienceCap = 200	//How much science can we store before having to transmit?		
-		powerRequirement = 5	//EC/Sec to research
-		ConverterName = Research
-		StartActionName = Start Research
-		StopActionName = Stop Research
-	}
+	!MODULE[WBISciLabOpsView]{}
 
 	MODULE
 	{
@@ -126,9 +113,6 @@
 
 		//name of the template nodes to use
 		templateNodes = PATH_SCIENCE
-
-		//Don't let the WBIModuleSwitcher add resource converters. We'll do that ourselves.
-		ignoreTemplateModules = ModuleResourceConverter
 
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
@@ -189,9 +173,6 @@
 
 		//name of the template nodes to use
 		templateNodes = PATH_HABITATION
-
-		//Don't let the WBIModuleSwitcher add resource converters. We'll do that ourselves.
-		ignoreTemplateModules = ModuleResourceConverter
 
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
