Resource Distribution Update

--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
@@ -310,18 +310,9 @@ opsViewTitle = Ponderosa Operations
 		textureQuadName = flagTransform
 	}
 
-
 	MODULE
 	{
-		//This module is used to change the screens of any monitor props in your IVA. The prop needs to have an InternalScreenSwitcher.
-		name = WBIScreenPropHelper
-
-		//Number of seconds to wait before changing the screens
-		//Set to 0 to keep the images static.
-		screenChangeSeconds = 30.0
-
-		//Separate your paths with a semicolon. Don't forget to add a "/" at the end of your path!
-		screenImagePaths = WildBlueIndustries/Pathfinder/Spaces/Screens/
+		name = WBIPropStateHelper
 	}
 
 	RESOURCE
