--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/SolarFlare.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/SolarFlare.cfg
@@ -18,7 +18,7 @@ PATH_INDUSTRY
 
 	MODULE
 	{
-		name = WBIBreakableResourceConverter
+		name = WBIPowerGenerator
 		ConverterName = Fusion Reactor
 		StartActionName = Start Fusion Reactor
 		StopActionName = Stop Fusion Reactor
