--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
@@ -133,7 +133,7 @@ PART
 		//These colliders need to be switched between layer 26 (WheelCollidersIgnore) and 0 (default). When deflated, they're on
 		//layer 26. When inflated, they're on layer 0. That way wheels ignore them when deflated, and you can transfer crew into the
 		//module when inflated.
-		inflatableColliders = Collider;TunnelCollider001;TunnelCollider002;TunnelCollider003;Collider2
+		inflatableColliders = LabCollider;TunnelCollider001;TunnelCollider002;TunnelCollider003;Collider2
 
 		//Name of inflatable animation
 		animationName = Deploy
