--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/SunburnLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/SunburnLab.cfg
@@ -194,35 +194,28 @@ PATH_SCIENCE
 		 
 		INPUT_RESOURCE
 		{
-			ResourceName = Coolant
-			Ratio = 0.01
+			ResourceName = Water
+			Ratio = 13.2
 			FlowMode = STAGE_PRIORITY_FLOW
 		}
 
 		INPUT_RESOURCE
 		{
-			ResourceName = RareMetals
-			Ratio = 0.001
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ExoticMinerals
-			Ratio = 0.001
+			ResourceName = XenonGas
+			Ratio = 6
 			FlowMode = STAGE_PRIORITY_FLOW
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 30
+			Ratio = 24.4
 		}
 
 		OUTPUT_RESOURCE
 		{
 			ResourceName = Glykerol
-			Ratio = .0025
+			Ratio = .006
 			DumpExcess = false
 			FlowMode = STAGE_PRIORITY_FLOW
 		}
