--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/PowerPack.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/PowerPack.cfg
@@ -140,6 +140,12 @@ FLEX_FUEL
 			Ratio = 18
 			DumpExcess = false
 		}
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Water
+			Ratio = 0.22625
+			DumpExcess = true
+		}
 	}
 
 	RESOURCE
@@ -215,6 +221,12 @@ FLEX_FUEL
 			ResourceName = ElectricCharge
 			Ratio = 18
 			DumpExcess = false
+		}
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Water
+			Ratio = 0.22625
+			DumpExcess = true
 		}
 	}
 
