--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_CommercialSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_CommercialSciLab.cfg
@@ -1,6 +1,6 @@
 //If you want to let every part that has a ModuleScienceConverter (like the stock Mobile Processing Lab)
 //have the same science functionality as the Doc Commercial Science Lab, then rename this file from .txt to .cfg.
-@PART[*]:HAS[@MODULE[ModuleScienceConverter]]
+@PART[*]:HAS[@MODULE[ModuleScienceConverter]]:FINAL
 {
     @MODULE[ModuleScienceConverter]
     {
@@ -9,7 +9,7 @@
         reputationPerData = 1.0  //How much Reputation per point of data
     }
 
-    MODULE
+    MODULE:HAS[@MODULE[!WBISciLabOpsView]]
     {
         name = WBISciLabOpsView
         showOpsView = true
