--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
@@ -249,6 +249,13 @@
 	{
 		resourcesToKeep = Supplies
 	}
+
+	RESOURCE
+	{
+		name = Supplies
+		amount = 1944
+		maxAmount = 1944
+	}
 }
 
 @PART[WBI_DocSciLab]:NEEDS[USILifeSupport]
@@ -270,6 +277,14 @@
 		amount = 1900
 		maxAmount = 1900
 	}
+
+	RESOURCE
+	{
+		name = Supplies
+		amount = 1944
+		maxAmount = 1944
+	}
+
 }
 
 @PART[WBI_Hacienda]:NEEDS[USILifeSupport]
@@ -291,6 +306,13 @@
 		amount = 2900
 		maxAmount = 2900
 	}
+
+	RESOURCE
+	{
+		name = Supplies
+		amount = 1944
+		maxAmount = 1944
+	}
 }
 
 @PART[WBI_Ponderosa]:NEEDS[USILifeSupport]
@@ -306,6 +328,14 @@
 		amount = 1150
 		maxAmount = 1150
 	}
+
+	RESOURCE
+	{
+		name = Supplies
+		amount = 1944
+		maxAmount = 1944
+	}
+
 }
 
 @PART[WBI_Ponderosa2]:NEEDS[USILifeSupport]
@@ -321,6 +351,13 @@
 		amount = 1150
 		maxAmount = 1150
 	}
+
+	RESOURCE
+	{
+		name = Supplies
+		amount = 1944
+		maxAmount = 1944
+	}
 }
 
 @PATH_HABITATION[PonderosaHab]:NEEDS[USILifeSupport]
@@ -335,7 +372,7 @@
 	{
 		name = ModuleLifeSupportRecycler
 		CrewCapacity = 6
-		RecyclePercent = .50
+		RecyclePercent = .90
 		ConverterName = Life Support
 		tag = Life Support
 		StartActionName = Start Life Support
