--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
@@ -59,13 +59,13 @@ PART
 	maxTemp = 1000
 	skinMaxTemp = 2000
 	emissiveConstant = 0.5
-	CrewCapacity = 0
+	CrewCapacity = 2
 	vesselType = Base
 	fuelCrossFeed = True
 
 	INTERNAL
 	{
-		name = Mobile_Processing_Lab_Int
+		name = WBI_DocSpace
 	}
 
 	MODULE
@@ -157,7 +157,6 @@ PART
 
 		//name of the template nodes to use
 		templateNodes = PATH_SCIENCE
-		resourcesToKeep = Snacks;Food;Oxygen;Water;CarbonDioxide;Waste;WasteWater;PlasmaShielding;Supplies;Mulch;ReplacementParts
 
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
@@ -174,6 +173,19 @@ PART
 
 		partToolTipTitle = Your First Commercial Lab
 	partToolTip = Just like a multipurpose habitat, this general-purpose science lab can be reconfigured for several different science roles with a feat of engineering- if you have the right resources and talent. A bastion of science, resources made by one of the lab's configurations will benefit from chemical analysis.
+
+		//Snacks
+		resourcesToKeep:NEEDS[Snacks] = ElectricCharge;Snacks
+
+		//Kerbalism
+		resourcesToKeep:NEEDS[Kerbalism] = ElectricCharge;Shielding;Food;Oxygen
+
+		//TAC-LS
+		resourcesToKeep:NEEDS[TacLifeSupport] = ElectricCharge;Food;Oxygen;Water;CarbonDioxide;Waste;WasteWater
+
+		//USI-LS
+		resourcesToKeep:NEEDS[USILifeSupport] = ElectricCharge;Supplies;Mulch;ReplacementParts
+
 	}
 
 	MODULE
