--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
@@ -59,14 +59,14 @@ PART
 	maxTemp = 1000
 	skinMaxTemp = 2000
 	emissiveConstant = 0.5
-	CrewCapacity = 0
+	CrewCapacity = 1
 	vesselType = Base
 	fuelCrossFeed = True
 	CoMOffset = 0, 0, -4
 
 	INTERNAL
 	{
-		name = cupolaInternal
+		name = WBI_ChuckwagonSpace
 	}
 
 
@@ -165,20 +165,6 @@ PART
 		openSndPath = KIS/Sounds/containerOpen
 		closeSndPath = KIS/Sounds/containerClose
 		defaultMoveSndPath = KIS/Sounds/itemMove
-	}
-
-	//Seat inventories are added manually.
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 0.001
-		slotsX = 2
-		slotsY = 4
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/inventoryOpen
-		closeSndPath = KIS/Sounds/inventoryClose
 	}
 
 	MODULE
