--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Gaslight.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Gaslight.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = WBI_Gaslight
+	name = WBI_Gaslight2
 	module = Part
 	author = Angel-125
 
@@ -38,7 +38,7 @@ PART
 	MODULE
 	{
 		name = KASModuleStrut 
-		nodeTransform = plugPort1
+		nodeTransform = plugPort
 		type = PipeSize1
 		maxLenght = 50
 		maxAngle = 100
@@ -54,75 +54,6 @@ PART
 		evaStrutPos = (0.05, 0.059, -0.21)
 		evaStrutRot = (190.0, 0.0, 0.0)
 		tubeTexPath = KAS/Textures/pipe
-	}
-
-	MODULE
-	{
-		name = KASModuleStrut 
-		nodeTransform = plugPort2
-		type = PipeSize1
-		maxLenght = 50
-		maxAngle = 100
-		breakForce = 600
-		allowDock = true
-		allowPumpFuel = true
-		hasCollider = false
-		tubeScale = 0.15
-		jointScale = 0.15
-		textureTiling = 1
-		tubeSrcType = Joined
-		tubeTgtType = Joined
-		evaStrutPos = (0.05, 0.059, -0.21)
-		evaStrutRot = (190.0, 0.0, 0.0)
-		tubeTexPath = KAS/Textures/pipe
-	}
-
-	MODULE
-	{
-		name = KASModuleStrut 
-		nodeTransform = plugPort3
-		type = PipeSize1
-		maxLenght = 50
-		maxAngle = 100
-		breakForce = 600
-		allowDock = true
-		allowPumpFuel = true
-		hasCollider = false
-		tubeScale = 0.15
-		jointScale = 0.15
-		textureTiling = 1
-		tubeSrcType = Joined
-		tubeTgtType = Joined
-		evaStrutPos = (0.05, 0.059, -0.21)
-		evaStrutRot = (190.0, 0.0, 0.0)
-		tubeTexPath = KAS/Textures/pipe
-	}
-
-	MODULE
-	{
-		name = KASModuleStrut 
-		nodeTransform = plugPort4
-		type = PipeSize1
-		maxLenght = 50
-		maxAngle = 100
-		breakForce = 600
-		allowDock = true
-		allowPumpFuel = true
-		hasCollider = false
-		tubeScale = 0.15
-		jointScale = 0.15
-		textureTiling = 1
-		tubeSrcType = Joined
-		tubeTgtType = Joined
-		evaStrutPos = (0.05, 0.059, -0.21)
-		evaStrutRot = (190.0, 0.0, 0.0)
-		tubeTexPath = KAS/Textures/pipe
-	}
-
-	MODULE
-	{
-		name = WBIMultiKASPipe
-		portName = plugPort
 	}
 
 	MODULE
@@ -137,7 +68,7 @@ PART
 	MODULE
 	{
 		name = ModuleKISPartStatic
-		breakForce = 10
+		breakForce = 2000
 	}
 
 	MODULE
@@ -158,7 +89,7 @@ PART
 		red = 1
 		green = 1
 		blue = 1
-	intensity = 3
+		intensity = 3
 	}
 
 	MODULE
