--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -60,13 +60,13 @@ PART
 	maxTemp = 1000
 	skinMaxTemp = 2000
 	emissiveConstant = 0.5
-	CrewCapacity = 0
+	CrewCapacity = 4
 	vesselType = Base
 	fuelCrossFeed = True
 
 	INTERNAL
 	{
-		name = crewCabinInternals
+		name = WBI_HaciendaSpace
 	}
 
 	MODULE
@@ -275,7 +275,6 @@ PART
 
 		//name of the template nodes to use
 		templateNodes = PATH_INDUSTRY;HOTSPRINGS
-		resourcesToKeep = Snacks;Food;Oxygen;Water;CarbonDioxide;Waste;WasteWater;PlasmaShielding;Supplies;Mulch;ReplacementParts
 
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
@@ -293,6 +292,19 @@ PART
 		partToolTipTitle = Your First Industrial Plant
 		partToolTip = This module is the cornerstone for all your industrial needs. It is a captain of industry; resources created in the module's various configurations will benefit from metallurgic analysis.
 		opsViewTitle = Hacienda Operations
+
+		//Snacks
+		resourcesToKeep:NEEDS[Snacks] = Snacks
+
+		//Kerbalism
+		resourcesToKeep:NEEDS[Kerbalism] = Shielding;Food;Oxygen
+
+		//TAC-LS
+		resourcesToKeep:NEEDS[TacLifeSupport] = Food;Oxygen;Water;CarbonDioxide;Waste;WasteWater
+
+		//USI-LS
+		resourcesToKeep:NEEDS[USILifeSupport] = Supplies;Mulch;ReplacementParts
+
 	}
 
 	MODULE
@@ -335,59 +347,6 @@ PART
 		openSndPath = KIS/Sounds/containerOpen
 		closeSndPath = KIS/Sounds/containerClose
 		defaultMoveSndPath = KIS/Sounds/itemMove
-	}
-
-	//Seat inventories are added manually.
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 0.001
-		slotsX = 2
-		slotsY = 4
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/inventoryOpen
-		closeSndPath = KIS/Sounds/inventoryClose
-	}
-
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 0.001
-		slotsX = 2
-		slotsY = 4
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/inventoryOpen
-		closeSndPath = KIS/Sounds/inventoryClose
-	}
-
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 0.001
-		slotsX = 2
-		slotsY = 4
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/inventoryOpen
-		closeSndPath = KIS/Sounds/inventoryClose
-	}
-
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 0.001
-		slotsX = 2
-		slotsY = 4
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/inventoryOpen
-		closeSndPath = KIS/Sounds/inventoryClose
 	}
 
 	MODULE
