--- a/GameData/WildBlueIndustries/Pathfinder/Plugins/PluginData/Pathfinder/Settings.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Plugins/PluginData/Pathfinder/Settings.cfg
@@ -1,6 +1,6 @@
 payToRemodel = False
 requireSkillCheck = False
-repairsRequireResources = False
+repairsRequireResources = True
 partsCanBreak; = False
 drillTechNode = specializedConstruction
 playModePath = 
