--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/CropWorks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/CropWorks.cfg
@@ -9,6 +9,7 @@ PATH_INDUSTRY
 	mass = 5
 	requiredResource = Equipment
 	requiredAmount = 2000
+	templateTags = orbitalWorkshop
 	reconfigureSkill = Scientist
 	logoPanel = WildBlueIndustries/Pathfinder/Decals/Greenhouse
 	glowPanel = WildBlueIndustries/Pathfinder/Decals/GreenhouseGlow
