--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/DocSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/DocSciLab.cfg
@@ -21,6 +21,144 @@ PATH_SCIENCE
 		name = WBISciLabOpsView
 	}
 
+	MODULE
+	{
+		name = WBIModuleScienceExperiment
+		experimentID = WBIEmptyExperiment
+		defaultExperiment = WBIEmptyExperiment
+		experimentActionName = Do Nothing
+		resetActionName = Reset Nothing
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = True
+		xmitDataScalar = 0.25
+		dataIsCollectable = False
+		interactionRange = 1.2
+		rerunnable = False
+		resettable = False
+		usageReqMaskInternal = 1
+		usageReqMaskExternal = 8
+	}
+
+	MODULE
+	{
+		name = WBIModuleScienceExperiment
+		experimentID = WBIEmptyExperiment
+		defaultExperiment = WBIEmptyExperiment
+		experimentActionName = Do Nothing
+		resetActionName = Reset Nothing
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = True
+		xmitDataScalar = 0.25
+		dataIsCollectable = False
+		interactionRange = 1.2
+		rerunnable = False
+		resettable = False
+		usageReqMaskInternal = 1
+		usageReqMaskExternal = 8
+	}
+
+	MODULE
+	{
+		name = WBIModuleScienceExperiment
+		experimentID = WBIEmptyExperiment
+		defaultExperiment = WBIEmptyExperiment
+		experimentActionName = Do Nothing
+		resetActionName = Reset Nothing
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = True
+		xmitDataScalar = 0.25
+		dataIsCollectable = False
+		interactionRange = 1.2
+		rerunnable = False
+		resettable = False
+		usageReqMaskInternal = 1
+		usageReqMaskExternal = 8
+	}
+
+	MODULE
+	{
+		name = WBIModuleScienceExperiment
+		experimentID = WBIEmptyExperiment
+		defaultExperiment = WBIEmptyExperiment
+		experimentActionName = Do Nothing
+		resetActionName = Reset Nothing
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = True
+		xmitDataScalar = 0.25
+		dataIsCollectable = False
+		interactionRange = 1.2
+		rerunnable = False
+		resettable = False
+		usageReqMaskInternal = 1
+		usageReqMaskExternal = 8
+	}
+
+	MODULE
+	{
+		name = WBIExperimentLab
+		debugMode = false
+
+		canCreateExperiments = true
+		experimentCreationSkill = Scientist
+		minimumCreationLevel = 2
+		defaultCreationResource = ResearchKits
+		minimumCreationAmount = 100.0
+		checkCreationResources = true
+
+		isGUIVisible = false
+		experimentID = WBISpaceResearch
+		ConverterName = Lab Time
+		StartActionName = Start Lab Time
+		StopActionName = Stop Lab Time
+		AutoShutdown = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.05
+		SpecialistBonusBase = 0.05
+		Specialty = Scientist
+		GeneratesHeat = false
+		hoursPerCycle = 6
+		crewsRequired = 1
+		minimumSuccess = 40
+		criticalSuccess = 95
+		criticalFail = 20
+		sciencePerCycle = 1.0
+		repairSkill = Scientist
+		repairResource = RocketParts
+		repairAmount = 100
+		defaultExperiment = WBIEmptyExperiment
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 5
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ResearchKits
+			Ratio = 0.00027777
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = LabTime
+			Ratio = 0.00028
+			DumpExcess = true
+		}
+	}
+
+	RESOURCE
+	{
+		name = ResearchKits
+		amount = 720
+		maxAmount = 720
+		isTweakable = true
+	}
+
 	RESOURCE
 	{
 		name = ElectricCharge
