--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/WatneyChemLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/WatneyChemLab.cfg
@@ -69,13 +69,13 @@ PATH_SCIENCE
 		INPUT_RESOURCE
 		{
 			ResourceName = MonoPropellant
-			Ratio = 1
+			Ratio = .5
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = Oxidizer
-			Ratio = 1
+			Ratio = .5
 		}
 
 		OUTPUT_RESOURCE
@@ -88,7 +88,7 @@ PATH_SCIENCE
 		OUTPUT_RESOURCE
 		{
 			ResourceName = Water
-			Ratio = 2.0
+			Ratio = 1.0
 			DumpExcess = false
 		}
 	}
@@ -131,6 +131,47 @@ PATH_SCIENCE
 			ResourceName = Water
 			Ratio = 1.0
 			DumpExcess = false
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleResourceConverter
+		ConverterName = Fuel Cell (LFO)
+		StartActionName = Start Fuel Cell
+		StopActionName = Stop Fuel Cell
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		Specialty = Scientist
+		EfficiencyBonus = 1
+		 
+		INPUT_RESOURCE
+		{
+			ResourceName = LiquidFuel
+			Ratio = 0.02025
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Oxidizer
+			Ratio = 0.02475
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 18
+			DumpExcess = false
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Water
+			Ratio = 0.225
+			DumpExcess = true
 		}
 	}
 
