--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
@@ -50,6 +50,16 @@ PART
 
 	MODULE
 	{
+		name = ModuleScienceContainer
+		
+		reviewActionName = Review Stored Data
+		storeActionName = Store Experiments
+		evaOnlyStorage = True
+		storageRange = 1.3
+	}
+
+	MODULE
+	{
 		name = ModuleKISInventory
 		maxVolume = 300
 		externalAccess = true
@@ -121,6 +131,39 @@ PART
 		labTechNode = fieldScience
 	}
 
+	MODULE:NEEDS[!Pathfinder]
+	{
+		name = ModuleScienceLab
+		containerModuleIndex = 0
+		dataStorage = 300
+		crewsRequired = 1
+		canResetConnectedModules = True
+		canResetNearbyModules = True
+		interactionRange = 5
+		SurfaceBonus = 0
+		ContextBonus = 0.05
+		homeworldMultiplier = 0.1
+
+		RESOURCE_PROCESS
+		{
+			name = ElectricCharge
+			amount = 10
+		}
+	}
+
+	MODULE:NEEDS[!Pathfinder]
+	{
+		name = ModuleScienceConverter
+		scientistBonus = 0.1	//Bonus per scientist star - need at least one! So 0.25x - 2.5x 
+		researchTime = 7	//Larger = slower.  Exponential!
+		scienceMultiplier = 5	//How much science does data turn into?
+		scienceCap = 300	//How much science can we store before having to transmit?		
+		powerRequirement = 5	//EC/Sec to research
+		ConverterName = Data Processing
+		StartActionName = Start Data Processing
+		StopActionName = Stop Data Processing
+	}
+
 	MODULE
 	{
 		name = ModuleScienceExperiment
@@ -135,16 +178,6 @@ PART
 		xmitDataScalar = 1.0
 		usageReqMaskInternal = 5
 		usageReqMaskExternal = -1
-	}
-
-	MODULE
-	{
-		name = ModuleScienceContainer
-		
-		reviewActionName = Review Stored Data
-		storeActionName = Store Experiments
-		evaOnlyStorage = True
-		storageRange = 1.3
 	}
 
 	MODULE
