--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Contracts.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Contracts.cfg
@@ -10,7 +10,7 @@
 		PART_REQUEST // A potential habitat request for outposts
 		{
 			Article = a // Article (A/An) to be used prior to part description
-			PartDescription = habitat module // Plain speech description of part for request
+			PartDescription = Ponderosa or Casa // Plain speech description of part for request
 			VesselDescription = outpost // Plain speech description of vessel for request
 			Keyword = Habitation // Contract briefing keyword
 			Part = WBI_Ponderosa // A part ID that triggers this request
@@ -42,8 +42,8 @@
 		PART_REQUEST // A potential storage request for outposts
 		{
 			Article = a // Article (A/An) to be used prior to part description
-			PartDescription = storage module // Plain speech description of part for request
-			VesselDescription = outpost // Plain speech description of vessel for request
+			PartDescription = Chuckwagon // Plain speech description of part for request
+			VesselDescription = storage depot // Plain speech description of vessel for request
 			Keyword = Storage // Contract briefing keyword
 			Part = WBI_Chuckwagon // A part ID that triggers this request
 			Part = WBI_MBM
@@ -102,7 +102,7 @@
 		PART_REQUEST // A potential science lab request for research labs
 		{
 			Article = an // Article (A/An) to be used prior to part description
-			PartDescription = research lab // Plain speech description of part for request
+			PartDescription = Doc Science Lab // Plain speech description of part for request
 			VesselDescription = research lab// Plain speech description of vessel for request
 			Keyword = Scientific // Contract briefing keyword
 			Part = WBI_DocSciLab // A part ID that triggers this request
@@ -130,22 +130,4 @@
 			}
 		}
 	}
-}
-
-// Cupolas count as cupolas for contracts
-@Contracts
-{
-	@Base
-	{
-        }
-	@Station
-	{
-		@PART_REQUEST:HAS[#Part[cupola]]
-		{
-			@Title = Have a cupola/observation/aperture module at the station
-			Part = crewpod-observation-25
-			Part = crewpod-cupola-375
-			Part = crewtube-cupola-125
-		}
-        }
 }
