--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Command/Ponderosa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Command/Ponderosa.cfg
@@ -42,11 +42,11 @@ PART
 	breakingTorque = 500
 	bulkheadProfiles = size1, srf
 	vesselType = Base
-	CrewCapacity = 0
+	CrewCapacity = 4
 
 	INTERNAL
 	{
-		name = crewCabinInternals
+		name = WBI_PonderosaSpace
 	}
 
 	MODULE
@@ -203,7 +203,6 @@ PART
 
 		//name of the template nodes to use
 		templateNodes = PATH_HABITATION
-		resourcesToKeep = Snacks;Food;Oxygen;Water;CarbonDioxide;Waste;WasteWater;PlasmaShielding;Supplies;Mulch;ReplacementParts
 
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
@@ -221,6 +220,19 @@ PART
 		partToolTipTitle = Your First Habitat
 		partToolTip = Want to use the Ponderosa for more than one purpose? With a feat of engineering, you can change it in the field. For a price... The cornerstone of your habitation needs, resources created in one of the module's many configurations will benefit from soil analysis.
 opsViewTitle = Ponderosa Operations
+
+		//Snacks
+		resourcesToKeep:NEEDS[Snacks] = ElectricCharge;Snacks
+
+		//Kerbalism
+		resourcesToKeep:NEEDS[Kerbalism] = ElectricCharge;Shielding;Food;Oxygen
+
+		//TAC-LS
+		resourcesToKeep:NEEDS[TacLifeSupport] = ElectricCharge;Food;Oxygen;Water;CarbonDioxide;Waste;WasteWater
+
+		//USI-LS
+		resourcesToKeep:NEEDS[USILifeSupport] = ElectricCharge;Supplies;Mulch;ReplacementParts
+
 	}
 
 	MODULE
@@ -255,59 +267,6 @@ opsViewTitle = Ponderosa Operations
 		openSndPath = KIS/Sounds/containerOpen
 		closeSndPath = KIS/Sounds/containerClose
 		defaultMoveSndPath = KIS/Sounds/itemMove
-	}
-
-	//Seat inventories are added manually.
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 0.001
-		slotsX = 2
-		slotsY = 4
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/inventoryOpen
-		closeSndPath = KIS/Sounds/inventoryClose
-	}
-
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 0.001
-		slotsX = 2
-		slotsY = 4
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/inventoryOpen
-		closeSndPath = KIS/Sounds/inventoryClose
-	}
-
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 0.001
-		slotsX = 2
-		slotsY = 4
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/inventoryOpen
-		closeSndPath = KIS/Sounds/inventoryClose
-	}
-
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 0.001
-		slotsX = 2
-		slotsY = 4
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/inventoryOpen
-		closeSndPath = KIS/Sounds/inventoryClose
 	}
 
 	MODULE
