--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Saddle.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Saddle.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = WBI_MiniSlab
+	name = WBI_MiniSlab2
 	module = Part
 	author = Angel-125
 
@@ -49,7 +49,7 @@ PART
 	MODULE
 	{
 	    name = KASModuleStrut 
-	    nodeTransform = plugPort1
+	    nodeTransform = plugPort
 	    type = PipeSize1
 	    maxLenght = 50
 	    maxAngle = 100
@@ -65,33 +65,6 @@ PART
 	    evaStrutPos = (0.05, 0.059, -0.21)
 	    evaStrutRot = (190.0, 0.0, 0.0)
 	    tubeTexPath = KAS/Textures/pipe
-	}
-
-	MODULE
-	{
-	    name = KASModuleStrut 
-	    nodeTransform = plugPort2
-	    type = PipeSize1
-	    maxLenght = 50
-	    maxAngle = 100
-	    breakForce = 600
-	    allowDock = true
-	    allowPumpFuel = true
-	    hasCollider = false
-	    tubeScale = 0.15
-	    jointScale = 0.15
-	    textureTiling = 1
-	    tubeSrcType = Joined
-	    tubeTgtType = Joined
-	    evaStrutPos = (0.05, 0.059, -0.21)
-	    evaStrutRot = (190.0, 0.0, 0.0)
-	    tubeTexPath = KAS/Textures/pipe
-	}
-
-	MODULE
-	{
-	    name = WBIMultiKASPipe
-	    portName = plugPort
 	}
 
 	MODULE
