--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Homestead.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Homestead.cfg
@@ -55,7 +55,7 @@ PART
 	maxTemp = 1000
 	skinMaxTemp = 2000
 	emissiveConstant = 0.5
-	CrewCapacity = 0
+	CrewCapacity = 4
 	vesselType = Station
 
 	INTERNAL
@@ -122,7 +122,6 @@ PART
 
 		//name of the template nodes to use
 		templateNodes = PATH_HABITATION;PATH_SCIENCE;PATH_INDUSTRY;ROCKHOUND
-		resourcesToKeep = Snacks;Food;Oxygen;Water;CarbonDioxide;Waste;WasteWater;PlasmaShielding;Supplies;Mulch;ReplacementParts
 
 		//We can filter out templates specified in templateNodes by setting allowedTags.
 		//If a template doesn't have at least one of the tags in allowedTags then it
@@ -146,6 +145,18 @@ PART
 		partToolTipTitle = Your First Industrial Plant
 		partToolTip = Want to use the Homestead for more than one purpose? With a feat of engineering, you can change it in the field. For a price... The cornerstone of your industrial needs, resources created in one of the module's many configurations will benefit from metallurgical analysis.
 opsViewTitle = Homestead Operations
+
+		//Snacks
+		resourcesToKeep:NEEDS[Snacks] = ElectricCharge;Snacks
+
+		//Kerbalism
+		resourcesToKeep:NEEDS[Kerbalism] = ElectricCharge;Shielding;Food;Oxygen
+
+		//TAC-LS
+		resourcesToKeep:NEEDS[TacLifeSupport] = ElectricCharge;Food;Oxygen;Water;CarbonDioxide;Waste;WasteWater
+
+		//USI-LS
+		resourcesToKeep:NEEDS[USILifeSupport] = ElectricCharge;Supplies;Mulch;ReplacementParts
 	}
 
 	MODULE
@@ -168,59 +179,6 @@ opsViewTitle = Homestead Operations
 		openSndPath = KIS/Sounds/containerOpen
 		closeSndPath = KIS/Sounds/containerClose
 		defaultMoveSndPath = KIS/Sounds/itemMove
-	}
-
-	//Seat inventories are added manually.
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 0.001
-		slotsX = 2
-		slotsY = 4
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/inventoryOpen
-		closeSndPath = KIS/Sounds/inventoryClose
-	}
-
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 0.001
-		slotsX = 2
-		slotsY = 4
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/inventoryOpen
-		closeSndPath = KIS/Sounds/inventoryClose
-	}
-
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 0.001
-		slotsX = 2
-		slotsY = 4
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/inventoryOpen
-		closeSndPath = KIS/Sounds/inventoryClose
-	}
-
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 0.001
-		slotsX = 2
-		slotsY = 4
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/inventoryOpen
-		closeSndPath = KIS/Sounds/inventoryClose
 	}
 
 	MODULE
@@ -247,7 +205,7 @@ opsViewTitle = Homestead Operations
 
 }
 
-//PART[WBI_Homestead]:FOR[Pathfinder]:NEEDS[MOLE]
+//PART[WBI_Homestead]:FOR[Pathfinder]:NEEDS[DSEV]
 //{
 //	@TechRequired = Unresearcheable
 //	@category = none
