Fixed typo -- now it really will do the proper edit-or-create thing.

--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_CommercialSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_CommercialSciLab.cfg
@@ -9,9 +9,9 @@
         reputationPerData = 1.0  //How much Reputation per point of data
     }
 
-    MODULE:HAS[@MODULE[!WBISciLabOpsView]]
+    %MODULE[WBISciLabOpsView]
     {
-        name = WBISciLabOpsView
-        showOpsView = true
+        %name = WBISciLabOpsView
+        %showOpsView = true
     }
 }
