--- a/GameData/WildBlueIndustries/Buffalo/Parts/Structural/ChassisDecoupler.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Structural/ChassisDecoupler.cfg
@@ -12,7 +12,7 @@ PART
 	node_stack_back = 0, 0, -.354, 0, 0, -1, 1
 	node_stack_front = 0, -0.787, 0.35, 0, 0, 1, 1
 
-	TechRequired = generalConstruction
+	TechRequired = advConstruction
 	entryCost = 3200
 	cost = 400
 	category = Structural
