--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_CLS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_CLS.cfg
@@ -1,78 +1,4 @@
-@PART[WBI_Chuckwagon]:HAS[!MODULE[ModuleConnectedLivingSpace]] 
-{
-    MODULE
-    {
-        name = ModuleConnectedLivingSpace
-        passable = true
-    }
-}
-
-@PART[WBI_Hacienda]:HAS[!MODULE[ModuleConnectedLivingSpace]] 
-{
-    MODULE
-    {
-        name = ModuleConnectedLivingSpace
-        passable = true
-    }
-}
-
-@PART[WBI_Conestoga,WBI_Conestoga2]:HAS[!MODULE[ModuleConnectedLivingSpace]] 
-{
-    MODULE
-    {
-        name = ModuleConnectedLivingSpace
-        passable = true
-    }
-}
-
-@PART[WBI_DocSciLab]:HAS[!MODULE[ModuleConnectedLivingSpace]] 
-{
-    MODULE
-    {
-        name = ModuleConnectedLivingSpace
-        passable = true
-    }
-}
-
-@PART[WBI_Ponderosa]:HAS[!MODULE[ModuleConnectedLivingSpace]] 
-{
-    MODULE
-    {
-        name = ModuleConnectedLivingSpace
-        passable = true
-    }
-}
-
-
-@PART[WBI_Ponderosa2]:HAS[!MODULE[ModuleConnectedLivingSpace]] 
-{
-    MODULE
-    {
-        name = ModuleConnectedLivingSpace
-        passable = true
-    }
-}
-
-
-@PART[WBI_Homestead]:HAS[!MODULE[ModuleConnectedLivingSpace]] 
-{
-    MODULE
-    {
-        name = ModuleConnectedLivingSpace
-        passable = true
-    }
-}
-
-@PART[WBI_Stockyard250]:HAS[!MODULE[ModuleConnectedLivingSpace]] 
-{
-    MODULE
-    {
-        name = ModuleConnectedLivingSpace
-        passable = true
-    }
-}
-
-@PART[WBI_Stockyard375]:HAS[!MODULE[ModuleConnectedLivingSpace]] 
+@PART[WBI_Chuckwagon,WBI_Hacienda,WBI_Conestoga,WBI_Conestoga2,WBI_DocSciLab,WBI_Ponderosa,WBI_Ponderosa2,WBI_Homestead,WBI_Stockyard250,WBI_Stockyard375,WBI_Switcback,WBI_Switcback2,WBI_TunnelExtender,WBI_Mineshaft,WBI_Conestoga,WBI_MBM,WBI_Mineshaft]:HAS[!MODULE[ModuleConnectedLivingSpace]] 
 {
     MODULE
     {
