--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
@@ -9,9 +9,9 @@
 	MODULE
 	{
 		name = ModuleResourceConverter
-		ConverterName = Composter
-		StartActionName = Start Composter
-		StopActionName = Stop Composter
+		ConverterName = Fertilizer (Ore)
+		StartActionName = Start Fertilizer
+		StopActionName = Stop Fertilizer
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = true
@@ -22,20 +22,88 @@
  
 		INPUT_RESOURCE
 		{
-			ResourceName = Mulch
-			Ratio = 0.0002	
+			ResourceName = Ore
+			Ratio = 2.5	
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 12
+			Ratio = 30
 		}
 
 		OUTPUT_RESOURCE
 		{
 			ResourceName = Fertilizer
-			Ratio = 0.0001
+			Ratio = 0.0025
+			DumpExcess = false
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleResourceConverter
+		ConverterName = Fertilizer (Gypsum)
+		StartActionName = Start Fertilizer
+		StopActionName = Stop Fertilizer
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		Specialty = Scientist
+		EfficiencyBonus = 1
+ 
+		INPUT_RESOURCE
+		{
+			ResourceName = Gypsum
+			Ratio = 2.5	
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 18
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Fertilizer
+			Ratio = 0.25
+			DumpExcess = false
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleResourceConverter
+		ConverterName = Fertilizer (Minerals)
+		StartActionName = Start Fertilizer
+		StopActionName = Stop Fertilizer
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		Specialty = Scientist
+		EfficiencyBonus = 1
+ 
+		INPUT_RESOURCE
+		{
+			ResourceName = Minerals
+			Ratio = 2.5	
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 18
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Fertilizer
+			Ratio = 0.25
 			DumpExcess = false
 		}
 	}
@@ -50,7 +118,15 @@
 
 	RESOURCE
 	{
-		name = Mulch
+		name = Gypsum
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = false
+	}
+
+	RESOURCE
+	{
+		name = Minerals
 		amount = 1000
 		maxAmount = 1000
 		isTweakable = false
@@ -69,40 +145,40 @@
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
+		SpecialistEfficiencyFactor = 0.05
+		SpecialistBonusBase = 0.05
 		Specialty = Scientist
 		EfficiencyBonus = 1
 		hoursPerCycle = 540 //Number of hours to grow crops
 		minimumSuccess = 45
-		criticalSuccess = 90
+		criticalSuccess = 95
 		criticalFail = 20
 		cropResource = Supplies
 		cropYield = 4374 //You'll have enough to feed 3 kerbals for 90 days, 16.2 Supplies per day.
-		criticalSuccessBonus = 0.25
 		failureLoss = 0.5
 
 		INPUT_RESOURCE
 		{
-			ResourceName = Water
-			Ratio = 0.0002
+			ResourceName = Dirt
+			Ratio = 0.000375
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = Fertilizer
-			Ratio = 0.0002
+			Ratio = 0.00045
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Mulch
+			Ratio = 0.0018
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
 			Ratio = 6
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Mulch
-			Ratio = 0.00001
 		}
 
 		REQUIRED_RESOURCE
@@ -123,7 +199,7 @@
 
 	RESOURCE
 	{
-		name = Water
+		name = Dirt
 		amount = 1000
 		maxAmount = 1000
 		isTweakable = true
@@ -158,28 +234,28 @@
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
+		SpecialistEfficiencyFactor = 0.05
+		SpecialistBonusBase = 0.05
 		Specialty = Scientist
 		EfficiencyBonus = 1
 		hoursPerCycle = 540 //Number of hours to grow crops
 		minimumSuccess = 45
-		criticalSuccess = 90
+		criticalSuccess = 95
 		criticalFail = 20
 		cropResource = Supplies
-		cropYield = 13668.75 //You'll have enough to feed 3 kerbals for 90 days, 16.2 Supplies per day.
-		criticalSuccessBonus = 0.25
+		cropYield = 13122 //You'll have enough to feed 9 kerbals for 90 days, 16.2 Supplies per day.
 		failureLoss = 0.5
 
 		INPUT_RESOURCE
 		{
-			ResourceName = Water
-			Ratio = 0.0004
+			ResourceName = Dirt
+			Ratio = 0.001125
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = Fertilizer
-			Ratio = 0.0004
+			Ratio = 0.00135
 		}
 
 		INPUT_RESOURCE
@@ -191,7 +267,7 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = Mulch
-			Ratio = 0.00002
+			Ratio = 0.0054
 		}
 
 		REQUIRED_RESOURCE
@@ -212,7 +288,7 @@
 
 	RESOURCE
 	{
-		name = Water
+		name = Dirt
 		amount = 1000
 		maxAmount = 1000
 		isTweakable = true
