--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_WBT.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_WBT.cfg
@@ -129,6 +129,11 @@ BUCKBOARD_GENERATOR2
 		}
 	}
 
+	MODULE
+	{
+		name = WBIPowerMonitor
+	}
+
 	RESOURCE
 	{
 		name = Ore
@@ -208,6 +213,11 @@ BUCKBOARD_GENERATOR3
 			Ratio = 7
 			DumpExcess = false
 		}
+	}
+
+	MODULE
+	{
+		name = WBIPowerMonitor
 	}
 
 	MODULE
