--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback.cfg
@@ -17,7 +17,7 @@ PART
 	node_stack_top = 0, 1.04, 0, 0, 1, 0, 2
 	node_attach = 0, 0, 0, 0, -1, 0, 2
 
-	TechRequired = generalConstruction
+	TechRequired = specializedConstruction
 	category = Structural
 	subcategory = -1
 	entryCost = 3800
