--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback2.cfg
@@ -17,7 +17,7 @@ PART
 	node_stack_front = 0, 0.7747217, -0.5740595, 0, 0, -1, 2
 	node_attach = 0, 0, 0, 0, -1, 0, 2
 
-	TechRequired = generalConstruction
+	TechRequired = specializedConstruction
 	entryCost = 3800
 	cost = 1800
 	category = Structural
@@ -56,8 +56,8 @@ PART
 		equipPos = (0,0.0,-0.55)
 		equipDir = (0,0,0)
 		runSpeed = 0.8
-		allowPartAttach = 2
-		allowStaticAttach = 1
+		allowPartAttach = AllowedWithKisTool
+		allowStaticAttach = AllowedAlways
 		staticAttachBreakForce = 2000
 	}
 
