--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
@@ -16,7 +16,7 @@ PART
 	node_stack_left = -1.93, 0.0, -3.071, -1, 0, 0, 2
 	node_stack_right = 1.93, 0.0, -3.071, 1, 0, 0, 2
 
-	TechRequired = spaceExploration
+	TechRequired = advExploration
 	entryCost = 18000
 	cost = 8000
 	category = Utility
