--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Sombrero.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Sombrero.cfg
@@ -1,39 +1,72 @@
 PART
 {
-	name = WBI_Gaslight2
+	name = WBI_Sombrero
 	module = Part
 	author = Angel-125
 
 	MODEL
 	{
-		model = WildBlueIndustries/Pathfinder/Assets/Gaslight
+		model = WildBlueIndustries/Pathfinder/Assets/Sombrero
 	}
 	rescaleFactor = 1
 	node_stack_bottom = 0, 0, 0, 0, -1, 0, 1
 
-	TechRequired = generalConstruction
-	entryCost = 3200
-	cost = 250
+	TechRequired = advElectrics
+	entryCost = 4600
+	cost = 1750
 	category = Utility
 	subcategory = 0
-	title = Gaslight Telescopic Lamppost
+	title = Sombrero Solar Array
 	manufacturer = Wild Blue Industries
-	description = Need a light? The Gaslight Telescopic Lamppost is for you! Simply bolt it to the ground (if you can run into it and move it, it's not bolted properly), hook it up to your base, extend the pole, and turn on the lights. The Gaslight also includes an MC-16 communications sytem, turning it into a deployable radio tower, and it can serve as a 4-way pipe junction.
+	description = The Sombrero is an advanced solar array that can track the sun in two directions. The dual-axis sun tracking ensures that the circular solar arrays are always pointed at the sun. Note that we said "dual" not "duel." The sun tracking systems don't fight each other. Can't we all just get along?
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,1
 
 	// --- standard part parameters ---
-	mass = 0.1
+	mass = 0.25
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-	crashTolerance = 40
+	crashTolerance = 7
 	maxTemp = 2000
 	breakingForce = 2000
 	breakingTorque = 2000
 	bulkheadProfiles = size1, srf
+	tags = solar array dual axis
+
+	//Y-axis of arrayPivot is the pivot
+	//Z-axis of suncatcher2 points to the sun.
+	MODULE
+	{
+		name = ModuleDeployableSolarPanel
+		animationName = empty
+		resourceName = ElectricCharge
+		chargeRate = 0
+		isBreakable = false
+		pivotName = arrayPivot
+		raycastTransformName = suncatcher2
+		windResistance = 5
+		trackingSpeed = 0.25		
+	}
+
+	//Y-axis of sunPivot is the pivot
+	//Z-axis of suncatcher points to the sun.
+	MODULE
+	{
+		name = WBIDualAxisSolarArray
+		rotationModuleIndex = 0
+		animationName = Deploy
+		resourceName = ElectricCharge
+		chargeRate = 12.0
+		retractable = true
+		isBreakable = true
+		pivotName = sunPivot
+		raycastTransformName = suncatcher
+		windResistance = 5
+		trackingSpeed = 0.25		
+	}
 
 	MODULE
 	{
@@ -67,42 +100,11 @@ PART
 	MODULE
 	{
 		name = ModuleKISItem
-		volumeOverride = 250
+		volumeOverride = 975
 		stackable = true
 		allowPartAttach = AllowedWithKisTool
 		allowStaticAttach = AllowedAlways
 		staticAttachBreakForce = 2000
-	}
-
-	MODULE
-	{
-		name = WBIAnimation
-		animationName = Deploy
-		startEventGUIName = Extend
-		endEventGUIName = Retract
-	}
-
-	MODULE
-	{
-		name = WBIGaslight
-		animationName = Gaslight
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
-		ecRequired = 0.04
-		red = 1
-		green = 1
-		blue = 1
-		intensity = 3
-	}
-
-	MODULE
-	{
-		name = ModuleDataTransmitter
-		packetInterval = 0.6
-		packetSize = 2
-		packetResourceCost = 12.0
-		requiredResource = ElectricCharge
-		DeployFxModules = 0
 	}
 
 	RESOURCE
