--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/SunburnLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/SunburnLab.cfg
@@ -16,7 +16,7 @@ PATH_SCIENCE
 	toolTip = Be sure to bring your sunscreen, the Sunburn lab is hot stuff! Create fusion pellets in the lab, and/or coolant for your radiators.
 	toolTipTitle = Your First Sunburn Lab!
 
-	MODULE
+	MODULE:NEEDS[DSEV]
 	{
 		name = ModuleResourceConverter
 		ConverterName = Coolant
