--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Captstone.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Captstone.cfg
@@ -32,7 +32,7 @@ node_stack_mount = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
 node_stack_back = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 2
 
 // --- editor parameters ---
-TechRequired = spaceExploration
+TechRequired = advExploration
 entryCost = 3200
 cost = 250
 category = Structural
