--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Saddle.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Saddle.cfg
@@ -12,7 +12,7 @@ PART
 	node_stack_top = 0, 0.20, 0, 0, 1, 0, 3
 	node_stack_bottom = 0, -0.03, 0, 0, -1, 0, 3
 
-	TechRequired = generalConstruction
+	TechRequired = spaceExploration
 	entryCost = 3200
 	cost = 400
 	category = Structural
