--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/TunnelExtender.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/TunnelExtender.cfg
@@ -15,7 +15,7 @@ PART
 	node_stack_front = 0, 0.0, -0.5714828, 0, 0, -1, 2
 	node_stack_top = 0, 0.5714829, 0, 0, 1, 0, 2
 
-	TechRequired = generalConstruction
+	TechRequired = specializedConstruction
 	entryCost = 3800
 	cost = 1800
 	category = Structural
