--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
@@ -35,7 +35,7 @@ PART
 	node_stack_right = 1.782, 0.0, -3.282, 1, 0, 0, 2
 
 	// --- editor parameters ---
-	TechRequired = advConstruction
+	TechRequired = specializedConstruction
 	entryCost = 4000
 	cost = 500
 	category = Utility
