--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Telegraph.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Telegraph.cfg
@@ -1,39 +1,60 @@
 PART
 {
-	name = WBI_Gaslight2
+	name = WBI_Telegraph
 	module = Part
 	author = Angel-125
 
 	MODEL
 	{
-		model = WildBlueIndustries/Pathfinder/Assets/Gaslight
+		model = WildBlueIndustries/Pathfinder/Assets/Telegraph
 	}
 	rescaleFactor = 1
 	node_stack_bottom = 0, 0, 0, 0, -1, 0, 1
 
-	TechRequired = generalConstruction
-	entryCost = 3200
-	cost = 250
-	category = Utility
+	TechRequired = electronics
+	entryCost = 4600
+	cost = 1750
+	category = Science
 	subcategory = 0
-	title = Gaslight Telescopic Lamppost
+	title = Telegraph Satellite Dish
 	manufacturer = Wild Blue Industries
-	description = Need a light? The Gaslight Telescopic Lamppost is for you! Simply bolt it to the ground (if you can run into it and move it, it's not bolted properly), hook it up to your base, extend the pole, and turn on the lights. The Gaslight also includes an MC-16 communications sytem, turning it into a deployable radio tower, and it can serve as a 4-way pipe junction.
+	description = For those that want their MTV, the Telegraph Satellite Dish delivers. In addition to having a better data stream than the Gaslight, the Telegraph can relay signals from other craft. It also functions as a birdbath. Assembly instructions not included.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,1
 
 	// --- standard part parameters ---
-	mass = 0.1
+	mass = 0.25
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-	crashTolerance = 40
+	crashTolerance = 7
 	maxTemp = 2000
 	breakingForce = 2000
 	breakingTorque = 2000
 	bulkheadProfiles = size1, srf
+	tags = aerial antenna deploy direct dish extend fold radio signal transmi
+
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = Deploy
+		startEventGUIName = Extend
+		endEventGUIName = Retract
+		actionGUIName = Toggle Antenna
+		allowAnimationWhileShielded = False
+	}
+
+	MODULE
+	{
+		name = ModuleDataTransmitter
+		packetInterval = 0.1
+		packetSize = 2
+		packetResourceCost = 20.0
+		requiredResource = ElectricCharge
+		DeployFxModules = 0
+	}
 
 	MODULE
 	{
@@ -67,42 +88,11 @@ PART
 	MODULE
 	{
 		name = ModuleKISItem
-		volumeOverride = 250
+		volumeOverride = 975
 		stackable = true
 		allowPartAttach = AllowedWithKisTool
 		allowStaticAttach = AllowedAlways
 		staticAttachBreakForce = 2000
-	}
-
-	MODULE
-	{
-		name = WBIAnimation
-		animationName = Deploy
-		startEventGUIName = Extend
-		endEventGUIName = Retract
-	}
-
-	MODULE
-	{
-		name = WBIGaslight
-		animationName = Gaslight
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
-		ecRequired = 0.04
-		red = 1
-		green = 1
-		blue = 1
-		intensity = 3
-	}
-
-	MODULE
-	{
-		name = ModuleDataTransmitter
-		packetInterval = 0.6
-		packetSize = 2
-		packetResourceCost = 12.0
-		requiredResource = ElectricCharge
-		DeployFxModules = 0
 	}
 
 	RESOURCE
