--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Nukeworks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Nukeworks.cfg
@@ -100,9 +100,53 @@ PATH_INDUSTRY
 
 	MODULE
 	{
+		name = ModuleResourceConverter
+		ConverterName = Nuclear Reactor
+		StartActionName = Start Reactor
+		StopActionName = Stop Reactor	 
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		Specialty = Engineer
+		EfficiencyBonus = 1.2
+
+		 
+		INPUT_RESOURCE
+		{
+			ResourceName = EnrichedUranium
+			Ratio = 0.00000463
+			FlowMode = STAGE_PRIORITY_FLOW
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = DepletedUranium
+			Ratio = 0.00000309
+			DumpExcess = false
+			FlowMode = STAGE_PRIORITY_FLOW
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 175
+			DumpExcess = false
+			FlowMode = ALL_VESSEL
+		}
+	}
+
+	MODULE
+	{
 		name = WBIEfficiencyMonitor
 		efficiencyType = industry
 		harvestType = 0
+	}
+
+	MODULE
+	{
+		name = WBIPowerMonitor
 	}
 
 	RESOURCE
