--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
@@ -164,7 +164,7 @@ PART
 		defaultTemplate = Science Lab
 
 		//Name of the logo panel transforms
-		logoPanelTransform = logoPanel001, logoPanel002, logoPanel003, logoPanel004
+		logoPanelTransforms = logoPanel001, logoPanel002, logoPanel003, logoPanel004
 		decalsVisible = true
 
 		//If the part has a KIS container, this is the base and max amount
