--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Telegraph.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Telegraph.cfg
@@ -14,7 +14,7 @@ PART
 	TechRequired = electronics
 	entryCost = 4600
 	cost = 1750
-	category = Science
+	category = Communication
 	subcategory = 0
 	title = Telegraph Satellite Dish
 	manufacturer = Wild Blue Industries
