--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -227,6 +227,34 @@ PART
 	MODULE:NEEDS[Workshop]
 	{
 		name = OseModuleCategoryAddon
+		Category = Electrical
+		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_electrics
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Ground
+		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_advancedmotors
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Payload
+		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_composites
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Communication
+		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_advunmanned
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
 		Category = Science
 		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_advsciencetech
 	}
