--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Mule.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Mule.cfg
@@ -30,10 +30,10 @@ PART
 	node_stack_bottom = 0.0, -0.94, 0.0, 0.0, -1.0, 0.0, 2
 
 	// --- editor parameters ---
-	TechRequired = fuelSystems
+	TechRequired = spaceExploration
 	entryCost = 9000
 	cost = 1600
-	category = Utility
+	category = Payload
 	subcategory = 0
 	title = Mule MLM
 	manufacturer = Wild Blue Industries
@@ -43,7 +43,7 @@ PART
 	attachRules = 1,1,1,1,1
 
 	// --- standard part parameters ---
-	mass = 1.0
+	mass = 0.6
 	dragModelType = default
 	maximum_drag = 0.25
 	minimum_drag = 0.25
