--- a/Pathfinder/Pathfinder.csproj
+++ b/Pathfinder/Pathfinder.csproj
@@ -55,13 +55,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GUI\PipelineWindow.cs" />
     <Compile Include="ResourceDistribution\DistributionView.cs" />
     <Compile Include="GUI\DrillSwitchWindow.cs" />
-    <Compile Include="GUI\PathfinderConfig.cs" />
+    <Compile Include="Settings\PathfinderAppButton.cs" />
     <Compile Include="GUI\SciLabOpsWindow.cs" />
     <Compile Include="GUI\WBIDrillOpsView.cs" />
     <Compile Include="Habitat\WBIGreenhouse.cs" />
-    <Compile Include="GUI\PathfinderSettings.cs" />
+    <Compile Include="Settings\PathfinderAppView.cs" />
     <Compile Include="GUI\PlayModesWindow.cs" />
     <Compile Include="Science\WBIBiomeAnalysis.cs" />
     <Compile Include="GUI\TerainUplinkView.cs" />
@@ -80,7 +81,7 @@
     <Compile Include="Scenario\WBIPathfinderScenario.cs" />
     <Compile Include="Drills\WBIDrillManager.cs" />
     <Compile Include="Drills\WBIExtractionMonitor.cs" />
-    <Compile Include="Drills\WBIModuleCoreSample.cs" />
+    <Compile Include="Science\WBIModuleCoreSample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scenario\WBIEfficiencyMonitor.cs" />
     <Compile Include="TestData.cs" />
@@ -96,6 +97,7 @@
     <Compile Include="Parts\WBISpyglassOpsView.cs" />
     <Compile Include="Industry\WBIPowerGenerator.cs" />
     <Compile Include="WBIFieldPromotion.cs" />
+    <Compile Include="ResourceDistribution\WBIPipeEndpoint.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\WildBlueTools\WildBlueTools.csproj">
