--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_KPBS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_KPBS.cfg
@@ -208,7 +208,7 @@
 		GeneratesHeat = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
-		ExperienceEffect = ScienceSkill
+		Specialty = Scientist
 		EfficiencyBonus = 1
 		hoursPerCycle = 540 //Number of hours to grow crops
 		minimumSuccess = 45
@@ -280,7 +280,7 @@
 		GeneratesHeat = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
-		ExperienceEffect = ScienceSkill
+		Specialty = Scientist
 		EfficiencyBonus = 1
 		hoursPerCycle = 540 //Number of hours to grow crops
 		minimumSuccess = 45
@@ -400,7 +400,7 @@
 		GeneratesHeat = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
-		ExperienceEffect = ScienceSkill
+        Specialty = Scientist
 		EfficiencyBonus = 1
 		hoursPerCycle = 540 //Number of hours to grow crops
 		minimumSuccess = 45
@@ -465,5 +465,93 @@
 		amount = 500
 		maxAmount = 500
 		isTweakable = true
+	}
+}
+
+@PART[KKAOSS_Greenhouse_g]:FOR[Pathfinder]:NEEDS[PlanetarySurfaceStructures,Kerbalism]
+{
+	!MODULE[PlanetaryGreenhouse]{}
+
+	MODULE
+	{
+		name = WBIGreenhouse
+		ConverterName = Greenhouse
+		StartActionName = Start Grenhouse
+		StopActionName = Stop Greenhouse
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		Specialty = Scientist
+		EfficiencyBonus = 1
+		hoursPerCycle = 540 //Number of hours to grow crops
+		minimumSuccess = 45
+		criticalSuccess = 90
+		criticalFail = 20
+		cropResource = Food
+		cropYield = 2500
+		criticalSuccessBonus = 0.25
+		failureLoss = 0.5
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Water
+			Ratio = 0.0004
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Fertilizer
+			Ratio = 0.00004
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 12
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Oxygen
+			Ratio = 0.0000002
+		}
+
+		REQUIRED_RESOURCE
+		{
+			ResourceName = Fertilizer
+			Ratio = 250
+		}
+
+	}
+
+	RESOURCE
+	{
+		name = Fertilizer
+		amount = 700
+		maxAmount = 700
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Water
+		amount = 700
+		maxAmount = 700
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Food
+		amount = 1000
+		maxAmount = 1000
+	}
+
+	RESOURCE
+	{
+		name = Oxygen
+		amount = 10000
+		maxAmount = 10000
 	}
 }
